[package]
name = "side-swap"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = {version = "0.10.1", features = ["wav"]}
bevy_rapier2d = "0.21.0"
rand = "0.8.5"

[dev-dependencies.bevy_rapier2d]
version = "0.21.0"
features = ["debug-render-2d"]
